Creacion de cookies

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,10 +1,19 @@
+
+<!-- Nombre del programador: Michael Guaman
+* Materia: Lenguajes de Programacion 2
+* Fecha: 20/05/2024
+* Detalle:Prueba sobre el metodo factorial
+* Version:1.1.0-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Cookie</title>
 </head>
 <body>
-$END$
+
+<h1> Manejo de cookie</h1>
+<a href="Servlet">Crear Cookie</a>
 </body>
 </html>
